--- a/pdapi/template.xhtml
+++ b/pdapi/template.xhtml
@@ -3,16 +3,14 @@
         <title></title>
     </head>
     <body>
-        Total: {{.Total}}
         <table>
             {{range .Oncalls}}
-            {{if eq .EscalationLevel 1}}
+            {{if and (eq .EscalationLevel 1) (not (eq .NiceStartDate "0001-01-01"))}}
             <tr>
                 {{if eq .Start.Weekday.String "Saturday" "Sunday"}}
-                <td>*</td>
-                {{end}}
                 <td>{{.Start.Weekday}}</td>
-                <td>{{.Start}}</td>
+                <td>{{.NiceStartDate}}</td>
+                {{end}}
             </tr>
             {{end}}
             {{end}}
