switch to bootstrap

--- a/pdapi/schedules.xhtml
+++ b/pdapi/schedules.xhtml
@@ -1,19 +1,31 @@
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <table>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <title>Weekend oncalls</title>
+  </head>
+
+  <body>
+    <table>
             {{range .Oncalls}}
             {{if and (eq .EscalationLevel 1) (not (eq .NiceStartDate "0001-01-01"))}}
-            <tr>
+      <tr>
                 {{if eq .Start.Weekday.String "Saturday" "Sunday"}}
-                <td>{{.Start.Weekday}}</td>
-                <td>{{.NiceStartDate}}</td>
+        <td>{{.Start.Weekday}}</td>
+        <td>{{.NiceStartDate}}</td>
                 {{end}}
-            </tr>
+      </tr>
             {{end}}
             {{end}}
-        </table>
-    </body>
+    </table>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
+  </body>
 </html>
