tables must be manually enabled

--- a/pdapi/schedules.xhtml
+++ b/pdapi/schedules.xhtml
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <table>
+    <table class="table">
             {{range .Oncalls}}
             {{if and (eq .EscalationLevel 1) (not (eq .NiceStartDate "0001-01-01"))}}
       <tr>
