also show if backup or oncall

--- a/pdapi/schedules.xhtml
+++ b/pdapi/schedules.xhtml
@@ -19,6 +19,7 @@
                 {{if eq .Start.Weekday.String "Saturday" "Sunday"}}
         <td>{{.Start.Weekday}}</td>
         <td>{{.NiceStartDate}}</td>
+        <td>{{.NiceSummary}}</td>
                 {{end}}
       </tr>
             {{end}}
